# r2rome

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: platform-rewrite.yaml
examples/out-ghost/: backend.html  be_data.html  frontend.html  index.html  infra.html
schemas/: r2rome.schema.json
src/r2rome/: __init__.py  __main__.py  assemble.py  cli.py  html_writer.py  model.py  render.py  scratch.py
src/r2rome/templates/: cdn_page.html  offline_page.html
tests/: conftest.py  test_assemble.py  test_model.py  test_render.py  test_scratch.py
